tests/baselines/reference/mergeTwoInterfaces2.errors.txt
mergeTwoInterfaces2.ts(4,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
mergeTwoInterfaces2.ts(14,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
mergeTwoInterfaces2.ts(25,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
mergeTwoInterfaces2.ts(26,19): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
mergeTwoInterfaces2.ts(37,8): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
mergeTwoInterfaces2.ts(38,19): error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.


==== mergeTwoInterfaces2.ts (6 errors) ====
    // two interfaces with the same root module should merge
    
    // root module now multiple module declarations
    module M2 {
           ~~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
        export interface A {
            foo: string;
        }
    
        var a: A;
        var r1 = a.foo
        var r2 = a.bar;
    }
    
    module M2 {
           ~~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
        export interface A {
            bar: number;
        }
    
        var a: A;
        var r1 = a.foo
        var r2 = a.bar;
    }
    
    // same as above but with an additional level of nesting
    module M2 {
           ~~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
        export module M3 {
                      ~~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
            export interface A {
                foo: string;
            }
    
            var a: A;
            var r1 = a.foo
            var r2 = a.bar;
        }
    }
    
    module M2 {
           ~~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
        export module M3 {
                      ~~
!!! error TS1294: This syntax is not allowed when 'erasableSyntaxOnly' is enabled.
            export interface A {
                bar: number;
            }
    
            var a: A;
            var r1 = a.foo
            var r2 = a.bar;
        }
    }